<resources>
    <string name="app_name">Medlog</string>

    <!-- master account -->
    <string name="admin">admin</string>
    <string name="pass">b276qmwbfm</string>
    <!-- master account -->

    <!-- Register Activity-->
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_acc">Enter ACC</string>
    <string name="register">Register</string>
    <!-- Register Activity-->

    <!-- Login Activity -->
    <string name="login">Login</string>
    <string name="create_acc">Create Account</string>
    <string name="invalid_login">Invalid Username or Password</string>
    <!-- Login Activity -->

    <!-- MedRepMainActivity -->
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="open_saved">Open Playlist</string>
    <!-- MedRepMainActivity -->

    <!-- AdminMainActivity -->
    <string name="upload_new">Upload New</string>
    <!-- AdminMainActivity -->

    <!-- AccountCreationCodeActivity -->
    <string name="acc_crtn_code">Account Creation Code:</string>
    <string name="reset_acc">Reset ACC</string>
    <string name="enter_new_code">Enter new code</string>
    <string name="reset">Reset</string>
    <!-- AccountCreationCodeActivity -->

    <!-- ListProductsActivity -->
    <string name="price">Price:</string>
    <string name="add_to_cart">Add to Cart</string>
    <!-- ListProductsActivity -->


    <!-- Errors -->
    <string name="no_internet">Not Connected</string>
    <!-- Errors -->

    <!--Product Group Name-->
    <string name="group_product_type">Section Form Wise Product</string>
    <string name="group_product_for">Classification Wise Product</string>
    <!--Product Group Name-->

    <!-- MedRep Main Menu -->
    <string name="list_products">Products</string>
    <string name="manage_playlist">Manage Playlist</string>
    <string name="signout">Signout</string>
    <!-- MedRep Main Menu -->

    <!-- Admin Main Menu -->
    <string name="mng_user">Manage Users</string>
    <!-- Admin Main Menu -->

    <!-- Dialogs -->
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <!-- Dialogs -->

    <!--Product Types-->
    <string-array name="product_types">
        <item>Tablet</item>
        <item>Capsule</item>
        <item>Softgel Capsule</item>
        <item>Cream</item>
        <item>Dry Syrup</item>
        <item>Eye Drops</item>
        <item>Injection</item>
        <item>Syrup</item>
        <item>Facewash</item>
        <item>Lotion</item>
        <item>Ointment</item>
        <item>Powder</item>
    </string-array>
    <!--Product Types-->

    <!--Product For-->
    <string-array name="product_for">
        <item>Analgesic</item>
        <item>Anti Allergic</item>
        <item>Anti Biotic</item>
        <item>Anti Cold</item>
        <item>Anti Cough</item>
        <item>Anti Fungal</item>
        <item>Anti Hypertensive</item>
        <item>Anti Malarials</item>
        <item>Anti Pyretic</item>
        <item>Anti Spasmodic</item>
        <item>BPH</item>
        <item>Cognition</item>
        <item>Fever</item>
        <item>Gynaecology</item>
        <item>Hepatology</item>
        <item>Hypersensitivity</item>
        <item>Muscle Relaxant</item>
        <item>Neurology</item>
        <item>Nutrients/Vitamins</item>
        <item>Oral Thrush</item>
        <item>Steroid</item>
        <item>Toothpaste</item>
        <item>Vasodilator</item>

    </string-array>
    <!--Product For-->

</resources>
