<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/primary_color_background"
        android:layout_centerInParent="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:theme="@style/ColoredEditText"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="50"
                android:hint="@string/enter_email"
                android:textColor="@color/colorPrimary"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:theme="@style/ColoredEditText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:textColor="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:theme="@style/ColoredButton"
            android:text="@string/login"
            />

        <Button
            android:id="@+id/create_acc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:theme="@style/ColoredButton"
            android:text="@string/create_acc"
            />

        <TextView
            android:id="@+id/invalid_login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_login"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progress_bar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:theme="@style/ProgressBar"/>

    </LinearLayout>


</RelativeLayout>
